fix: Update portfolio item styling for improved visibility and responsiveness

--- a/public/web/css/app.css
+++ b/public/web/css/app.css
@@ -1036,7 +1036,7 @@ section,
     position: relative;
 }
 
-.portfolio .portfolio-item .portfolio-info {
+/* .portfolio .portfolio-item .portfolio-info {
     background-color: color-mix(in srgb, var(--surface-color), transparent 10%);
     opacity: 0;
     position: absolute;
@@ -1046,7 +1046,7 @@ section,
     z-index: 3;
     transition: all ease-in-out 0.3s;
     padding: 15px;
-}
+} */
 
 .portfolio .portfolio-item .portfolio-info h4 {
     font-size: 18px;
